fix : 예외처리추가